@startuml

interface DanceImpl
DanceImpl : void spin();
DanceImpl : void doTheCaterpillar();
DanceImpl : void jump();


abstract class Bird
DanceImpl <|.. Bird
Bird : + name:String
Bird : + color:String
Bird : + {abstract} speak():void
Bird : + fly():void
Bird : + spin():void
Bird : + doTheCaterpillar():void
Bird : + jump():void

class Parrot
Bird <|-- Parrot
Parrot : + speak():void
Parrot : + type():void

class Lovebirds
Parrot <|-- Lovebirds
Lovebirds : + type():void

class Macaw
Parrot <|-- Macaw
Macaw : + type():void

class Penguin
Bird <|-- Penguin
Penguin : + speak():void
Penguin : + fly():void

class Pigeon
Bird <|-- Pigeon
Pigeon : + eatPizza():void
Pigeon : + speak():void
Pigeon : + sleep():void

@enduml